--- a/src/main/webapp/js/account/preferences/preferences.html
+++ b/src/main/webapp/js/account/preferences/preferences.html
@@ -12,7 +12,7 @@
   </div>
  
 	<div class="form-actions">
-	  <button type="submit" class="btn btn-sm btn-success" data-i18n="_save-changes_"></button>
+	  <button type="submit" class="btn btn-sm btn-primary" data-i18n="_save-changes_"></button>
 	  <button type="button" class="btn-sm btn-default" data-i18n="_cancel_"></button>
 	</div>
 </form>
