--- a/src/main/webapp/js/workbench/classification-and-enrichment/geolift-result.html
+++ b/src/main/webapp/js/workbench/classification-and-enrichment/geolift-result.html
@@ -46,7 +46,7 @@
     </div>
 	<div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save-results_"></a>
+			  <a class="btn btn-sm btn-primary" ng-click="save()" data-i18n="_save-results_"></a>
 		</div>
 		<div>
 			  <!-- <download-result></download-result> -->
