--- a/src/main/webapp/js/workbench/classification-and-enrichment/geolift.html
+++ b/src/main/webapp/js/workbench/classification-and-enrichment/geolift.html
@@ -92,7 +92,7 @@
 					  	<span>{{uploadMessage}}</span></div>
 						<div class="input-append">
 						<input id="dummyGeoLiftInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=lefile]').click();">
-						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();" data-i18n="_browse_"></a>
+						<a class="btn btn-sm btn-primary btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();" data-i18n="_browse_"></a>
 						</div>
 			    </div>
     </div>
@@ -106,7 +106,7 @@
 					  	<span>{{uploadMessage}}</span></div>
 						<div class="input-append">
 						<input id="dummyConfigInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=leotherfile]').click();">
-						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=leotherfile]').click();" data-i18n="_browse_"></a>
+						<a class="btn btn-sm btn-primary btn-large pull-left col-xs-3" onclick="$('input[id=leotherfile]').click();" data-i18n="_browse_"></a>
 						</div>
 			    </div>
     </div>
@@ -125,7 +125,7 @@
 			<div class="col-xs-2">
 		    </div>
 		    <div class="col-xs-2">
-				<a class="btn btn-sm btn-success btn-block" 
+				<a class="btn btn-sm btn-primary btn-block"
 				ng-click="appendInput()"></a>
 	  		</div>
 	</div>
@@ -189,7 +189,7 @@
 	<div class="col-xs-2"></div>
 	<div class="row col-xs-10" ng-show="startButton">
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" ng-click="LaunchGeoLift()" data-i18n="_geolift-start_"></a>
+		  <a class="btn btn-sm btn-primary btn-block" ng-click="LaunchGeoLift()" data-i18n="_geolift-start_"></a>
 		</div>
 	</div>
 	</div>
