--- a/src/main/webapp/js/workbench/extraction-and-loading/triplegeo.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/triplegeo.html
@@ -82,7 +82,7 @@
 					  	<span>{{uploadMessage}}</span></div>
 						<div class="input-append">
 						<input id="dummyShapeInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=lefile]').click();">
-						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();" data-i18n="_browse_"></a>
+						<a class="btn btn-sm btn-primary btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();" data-i18n="_browse_"></a>
 						</div>
 			    </div>
     </div>
@@ -96,7 +96,7 @@
 					  	<span>{{uploadMessage}}</span></div>
 						<div class="input-append">
 						<input id="dummyConfigInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=leotherfile]').click();">
-						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=leotherfile]').click();" data-i18n="_browse_"></a>
+						<a class="btn btn-sm btn-primary btn-large pull-left col-xs-3" onclick="$('input[id=leotherfile]').click();" data-i18n="_browse_"></a>
 						</div>
 			    </div>
     </div>
@@ -387,7 +387,7 @@
 	<div class="row">
 		<div class="col-xs-2"></div>
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" ng-show="stTripleGeo" ng-click="LaunchTripleGeo()" data-i18n="_triplegeo-start_"></a>
+		  <a class="btn btn-sm btn-primary btn-block" ng-show="stTripleGeo" ng-click="LaunchTripleGeo()" data-i18n="_triplegeo-start_"></a>
 		</div>
 	</div>
 	</div>
