--- a/src/main/webapp/js/workbench/linking-and-fusing/limes-result.html
+++ b/src/main/webapp/js/workbench/linking-and-fusing/limes-result.html
@@ -60,7 +60,7 @@ TODO: add input text so user can provide the graph name
 
   <div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save-res-in-new-graph_"></a>
+			  <a class="btn btn-sm btn-primary" ng-click="save()" data-i18n="_save-res-in-new-graph_"></a>
 		</div>
 	</div>
 </form>
