--- a/src/main/webapp/js/workbench/linking-and-fusing/limes.html
+++ b/src/main/webapp/js/workbench/linking-and-fusing/limes.html
@@ -37,7 +37,7 @@
 					  	<span>{{uploadMessage}}</span></div>
 						<div class="input-append">
 						<input id="dummyInput" class="input-sm pull-left col-xs-9" type="text" onclick="$('input[id=lefile]').click();">
-						<a class="btn btn-sm btn-success btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();" data-i18n="_browse_"></a>
+						<a class="btn btn-sm btn-primary btn-large pull-left col-xs-3" onclick="$('input[id=lefile]').click();" data-i18n="_browse_"></a>
 						</div>
 			    </div>
     </div>
@@ -71,7 +71,7 @@
 				<label for="showConfig" data-i18n="_options-form_"></label>
 		    </div>
 		    <div class="col-xs-2">
-				<a class="btn btn-sm btn-success btn-block" id="showConfig" ng-model="limes.showConfig" ng-click="enterConfig = !enterConfig" data-i18n="_show-form_"></a>
+				<a class="btn btn-sm btn-primary btn-block" id="showConfig" ng-model="limes.showConfig" ng-click="enterConfig = !enterConfig" data-i18n="_show-form_"></a>
 	  		</div>
 	</div>
 	<br>
@@ -212,10 +212,10 @@
 		<div class="col-xs-4">
 		</div>
 			<div class="col-xs-2">
-			<a class="btn btn-sm btn-success btn-block" ng-click="appendInput()" data-i18n="_add-properties_"></a>
+			<a class="btn btn-sm btn-primary btn-block" ng-click="appendInput()" data-i18n="_add-properties_"></a>
 			</div>
 		    <div class="col-xs-2">
-			<a class="btn btn-sm btn-success btn-block" ng-click="removeInput()" ng-show="deleteProp" data-i18n="_delete_"></a>
+			<a class="btn btn-sm btn-primary btn-block" ng-click="removeInput()" ng-show="deleteProp" data-i18n="_delete_"></a>
 			</div>
 	</div>
 	<!-- 
@@ -349,7 +349,7 @@
 	<div class="row">
 		<div class="col-xs-2"></div>
 		<div class="col-xs-2">
-		  <a class="btn btn-sm btn-success btn-block" id="startLimes" ng-show="startLimes" ng-click="LaunchLimes()" data-i18n="_limes-start_"></a>
+		  <a class="btn btn-sm btn-primary btn-block" id="startLimes" ng-show="startLimes" ng-click="LaunchLimes()" data-i18n="_limes-start_"></a>
 		</div>
 	</div>
 </form>
