--- a/src/main/webapp/js/workbench/manual-revision-and-authoring/ontowiki.html
+++ b/src/main/webapp/js/workbench/manual-revision-and-authoring/ontowiki.html
@@ -9,7 +9,7 @@
     </dl>
 
     <form class="form-horizontal InputForm col-xs-11"  role="form" >
-      <a class="btn btn-success btn-large" data-toggle="modal" ng-click="openModal();" data-i18n="_launch_"></a>
+      <a class="btn btn-primary btn-large" data-toggle="modal" ng-click="openModal();" data-i18n="_launch_"></a>
     </form>
   </div>
   <!-- Modal -->
