--- a/src/main/webapp/js/workbench/saveResults.html
+++ b/src/main/webapp/js/workbench/saveResults.html
@@ -10,7 +10,7 @@
 	<br/>
 	<div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save_"></a>
+			  <a class="btn btn-sm btn-primary" ng-click="save()" data-i18n="_save_"></a>
 		</div>
 	</div>
 </div>
@@ -20,6 +20,6 @@
 <br>
 <div class="row">
 	<div class="pull-left" style="padding-left:0">
-	  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save-res-in-new-graph_"></a>
+	  <a class="btn btn-sm btn-primary" ng-click="save()" data-i18n="_save-res-in-new-graph_"></a>
 	</div>
 </div>
