--- a/src/main/webapp/js/settings/namespaces/namespaces.html
+++ b/src/main/webapp/js/settings/namespaces/namespaces.html
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn-sm btn-success" ng-click="close('modalNamespace')" ng-click="save(); close('modalNamespace');"
+          <button type="button" class="btn-sm btn-primary" ng-click="close('modalNamespace')" ng-click="save(); close('modalNamespace');"
           ng-disabled="namespaceForm.$invalid || isUnchanged(namedgraph)" data-i18n="_save_"></button>
           <button type="button" class="btn-sm btn-default" ng-click="close('modalNamespace')" data-i18n="_cancel_"></button>
         </div>      
