--- a/src/main/webapp/js/workbench/extraction-and-loading/import-rdf.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/import-rdf.html
@@ -47,7 +47,7 @@
 	  	</div>
 	  	<div class="form-group">
     		<div class="col-lg-offset-2 col-xs-10">
-      		<button class="btn btn-success" ng-click="import()" ng-disabled="isInvalid()||isImporting()" data-i18n="_import_"></button>
+      		<button class="btn btn-primary" ng-click="import()" ng-disabled="isInvalid()||isImporting()" data-i18n="_import_"></button>
       		<span ng-show="isImporting()" data-i18n="_importing_"></span>
     		</div>
   	</div>
@@ -80,7 +80,7 @@
 	  	</div>
 	  	<div class="form-group">
     		<div class="col-lg-offset-2 col-xs-10">
-      		<button class="btn btn-success" ng-click="import()" ng-disabled="urlForm.$invalid || isUnchanged(importUrl) || isImporting()" data-i18n="_import_"></button>
+      		<button class="btn btn-primary" ng-click="import()" ng-disabled="urlForm.$invalid || isUnchanged(importUrl) || isImporting()" data-i18n="_import_"></button>
       		<span ng-show="isImporting()" data-i18n="_importing_"></span>
     		</div>
   		</div>
@@ -120,7 +120,7 @@
 	  	</div>
 	  	<div class="form-group">
     		<div class="col-lg-offset-2 col-xs-10">
-      		<button class="btn btn-success" ng-click="import()" ng-disabled="sparqlForm.$invalid || isUnchanged(importSparql) || isImporting()" data-i18n="_import_"></button>
+      		<button class="btn btn-primary" ng-click="import()" ng-disabled="sparqlForm.$invalid || isUnchanged(importSparql) || isImporting()" data-i18n="_import_"></button>
       		<span ng-show="isImporting()" data-i18n="_importing_"></span>
     		</div>
   		</div>	
