--- a/src/main/webapp/js/workbench/extraction-and-loading/triplegeo-result.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/triplegeo-result.html
@@ -45,7 +45,7 @@
 	<br/>
 	<div class="row">
 		<div class="pull-left" style="padding-left:0">
-			  <a class="btn btn-sm btn-success" ng-click="save()" data-i18n="_save-results_"></a>
+			  <a class="btn btn-sm btn-primary" ng-click="save()" data-i18n="_save-results_"></a>
 		</div>
 	</div>
 </form>
