--- a/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
+++ b/src/main/webapp/js/workbench/search-querying-and-exploration/virtuoso.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="form-group">
-        <a class="btn btn-success btn-large" data-toggle="modal" ng-click="setUrl(); openModal();" data-i18n="_launch_"></a>
+        <a class="btn btn-primary btn-large" data-toggle="modal" ng-click="setUrl(); openModal();" data-i18n="_launch_"></a>
       </div>
    
       <!-- <a class="btn btn-success btn-large" data-toggle="modal" ng-click="openModal();">Launch</a> -->
