Added missing imports (services etc)

--- a/src/main/webapp/popup.html
+++ b/src/main/webapp/popup.html
@@ -49,31 +49,45 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- <script src="lib/jquery/jquery-1.7.2.min.js"></script> -->
-    
     <script src="lib/jquery/jquery-1.9.1.js"></script>
     <script src="lib/jquery/jquery-ui-1.10.1.custom.min.js"></script>
      
-	<script src="lib/bootstrap/bootstrap.js"></script>
+    <script src="lib/bootstrap/bootstrap.js"></script>
     <script src="lib/angularjs/angular.js"></script>
     <script src="lib/angularjs/angular-cookies.js"></script>
     <script src="lib/angularjs/angular-route.js"></script>
     <script src="lib/modal-master/bootstrap-modal.js"></script>
     <script src="lib/modal-master/bootstrap-modalmanager.js"></script>
-    <script src="js/config.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/services.js"></script>
-    <script src="js/controllers.js"></script>
-
-    <!-- TODO: check what libraries should be added here, refactoring changed -->
-
+    <!-- services for the different modules/pages -->
+    <script src="js/services/config.js"></script>
+    <script src="js/services/services.js"></script>
+    <script src="js/services/configuration-service.js"></script>
+    <script src="js/services/graph-service.js"></script>
+    <script src="js/services/account-service.js"></script>
+    <script src="js/services/login-service.js"></script>
+    <script src="js/services/graph-group-service.js"></script>
     <!-- controllers for the different modules/pages -->
     <script src="js/controllers.js"></script>
     <script src="js/login-controller.js"></script>
+    <script src="js/workbench/extraction-and-loading/import-rdf-controller.js"></script>
+    <script src="js/workbench/extraction-and-loading/sparqlify-controller.js"></script>
     <script src="js/workbench/extraction-and-loading/triplegeo-controller.js"></script>
+    <script src="js/workbench/search-querying-and-exploration/facete-controller.js"></script>
+    <script src="js/workbench/search-querying-and-exploration/mappify-controller.js"></script>
+    <script src="js/workbench/search-querying-and-exploration/virtuoso-controller.js"></script>
+    <script src="js/workbench/manual-revision-and-authoring/ontowiki-controller.js"></script>
     <script src="js/workbench/classification-and-enrichment/geolift-controller.js"></script>
     <script src="js/workbench/linking-and-fusing/limes-controller.js"></script>
+    <script src="js/settings/settings-controller.js"></script>
+    <script src="js/settings/datasets/graphs-controller.js"></script>
+    <script src="js/settings/data-sources/endpoint-controller.js"></script>
+    <script src="js/settings/data-sources/database-controller.js"></script>
+    <script src="js/settings/namespaces/namespaces-controller.js"></script>
+    <script src="js/settings/components/components-controller.js"></script>
+    <script src="js/account/account-controller.js"></script>
 
-
+    <!-- directives -->
     <script src="js/directives.js"></script>
     <script src="lib/osm/OpenLayers.js"></script>
     <script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.6.0.min.js"></script>
@@ -81,6 +95,5 @@
     <script src="lib/angular-file-upload-master/angular-file-upload.min.js"></script>
     <script src="lib/angular-file-upload-master/FileAPI.min.js"></script>
     <script src="lib/angular-flash.min.js"></script>
-
   </body>
 </html>
