--- a/src/main/webapp/js/admin/roles.html
+++ b/src/main/webapp/js/admin/roles.html
@@ -33,6 +33,10 @@
     <span ng-show="savingRoles" data-i18n="_saving_"></span>
 
     <br/>
+    <br/>
+    <br/>
+
+    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalUser" ng-click="new();" data-i18n="_add-user_"></button>
 
     <h4>
         <span class="btn-group">
@@ -96,6 +100,55 @@
                     <div class="modal-footer">
                         <button type="submit" class="btn-sm btn-primary" ng-click="createRole();" ng-disabled="roleForm.$invalid || roleCreating" data-i18n="_add_"></button>
                         <button type="button" class="btn-sm btn-default" ng-click="close('#modalRole')" ng-disabled="roleCreating" data-i18n="_cancel_"></button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade" id="modalUser">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form name="userForm" class="form-horizontal InputForm" role="form" novalidate>
+                    <div class="modal-header">
+                        <button type="button" class="close" ng-click="close('#modalUser')" aria-hidden="true">&times;</button>
+                        <h5 class="modal-title green bold" data-i18n="_new-user-title_"></h5>
+                    </div>
+
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="username" class="col-lg-4 control-label" data-i18n="_username_"></label>
+                            <div class="col-lg-8">
+                                <input type="text" id="username" name="username" class="form-control" data-i18n-attr="_username_|placeholder" ng-model="newUser.profile.username" required/>
+                                <div class="error" ng-show="userForm.username.$dirty && userForm.username.$invalid">{{'_invalid-field-message_' | i18n}}:
+                                    <span ng-show="userForm.username.$error.required" data-i18n="_username-missed-message_"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="col-lg-4 control-label" data-i18n="_email_"></label>
+                            <div class="col-lg-8">
+                                <input type="email" id="email" name="email" class="form-control" data-i18n-attr="_email_|placeholder" ng-model="newUser.profile.email" required/>
+                                <div class="error" ng-show="userForm.email.$dirty && userForm.email.$invalid">{{'_invalid-field-message_' | i18n}}:
+                                    <span ng-show="userForm.email.$error.required" data-i18n="_email-missed-message_"></span>
+                                    <span ng-show="userForm.email.$error.email" data-i18n="_malformed-email-message_"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="role" class="col-lg-4 control-label" data-i18n="_role_"></label>
+                            <div class="col-lg-8">
+                                <select class="form-control" id="role" name="role" ng-model="newUser.profile.role" ng-options="role.uri as role.name for role in roles | orderBy:'name'" required></select>
+                                <div class="error" ng-show="userForm.role.$dirty && userForm.role.$invalid">{{'_invalid-field-message_' | i18n}}:
+                                    <span ng-show="userForm.role.$error.required" data-i18n="_role-missed-message_"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn-sm btn-primary" ng-click="createUser();" ng-disabled="userForm.$invalid || userCreating" data-i18n="_add_"></button>
+                        <button type="button" class="btn-sm btn-default" ng-click="close('#modalUser')" ng-disabled="userCreating" data-i18n="_cancel_"></button>
                     </div>
                 </form>
             </div>
