--- a/src/main/webapp/js/admin/users/users.html
+++ b/src/main/webapp/js/admin/users/users.html
@@ -1,6 +1,6 @@
 <h3 class="green bold" data-i18n="_users-management_"></h3>
 
-<div ng-controller="UserCtrl">
+<div ng-controller="UsersCtrl">
     <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalUser" ng-click="new();" data-i18n="_add-user_"></button>
 
     <div class="modal fade" id="modalUser">
