hide menu items depending on allowed services; reindex moved to Extraction menu

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -223,6 +223,7 @@
     <script src="js/workbench/extraction-and-loading/d2rq-mapping-controller.js"></script>
     <script src="js/workbench/extraction-and-loading/d2rq-task-controller.js"></script>
     <script src="js/workbench/extraction-and-loading/upload-file-controller.js"></script>
+    <script src="js/workbench/extraction-and-loading/reindex-controller.js"></script>
     <script src="js/workbench/search-querying-and-exploration/facete-controller.js"></script>
     <script src="js/workbench/search-querying-and-exploration/mappify-controller.js"></script>
     <script src="js/workbench/search-querying-and-exploration/virtuoso-controller.js"></script>
