--- a/src/main/webapp/js/workbench/default.html
+++ b/src/main/webapp/js/workbench/default.html
@@ -2,14 +2,14 @@
   	<div class="col-xs-2 sidebar">
 			
 			<div class="panel-group" id="accordion" ng-controller="StackMenuCtrl">
-			  <div class="panel panel-default" ng-repeat="group in groups">
+			  <div class="panel panel-default" ng-repeat="group in groups | filter:showGroup">
 				  <div class="panel-heading">
 					  <h5 class="panel-title">
 				        <span class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{group.id}}" data-i18n="{{group.title}}"></span>
 				      </h5>
 				  </div>
 				  <div id="{{group.id}}" class="panel-collapse collapse" ng-controller="SidebarCtrl">
-					  <div class="list-item" ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items">
+					  <div class="list-item" ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items | filter:showItem">
 							<h6>
                                 <a ng-show="item.route!=null" class="list-group-item" target="{{item.target}}" href="{{item.route}}" data-i18n="{{item.name}}"></a>
                                 <a ng-show="item.route==null" class="list-group-item" data-toggle="modal" href="" ng-click="setDirectUrl('{{item.url}}'); setModalTitle('{{item.modaltitle}}'); openModal('fullModalDirect');" data-i18n="{{item.name}}"></a>
