open reindex dialog directly from side menu

--- a/src/main/webapp/js/workbench/extraction-and-loading/reindex.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/reindex.html
@@ -1,7 +1,7 @@
 <div ng-controller="ReindexCtrl">
-    <h3 class="green bold" data-i18n="_reindex-docs_"></h3>
+    <!--h3 class="green bold" data-i18n="_reindex-docs_"></h3-->
 
-    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#reindexDocuments" ng-click="beforeReindex()" ng-disabled="!isLoggedIn()" data-i18n="_reindex-cur-thesaurus_"></button>
+    <!--button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#reindexDocuments" ng-click="beforeReindex()" ng-disabled="!isLoggedIn()" data-i18n="_reindex-cur-thesaurus_"></button-->
 
     <div class="modal fade" id="reindexDocuments">
         <div class="modal-dialog">
