--- a/src/main/webapp/js/workbench/default.html
+++ b/src/main/webapp/js/workbench/default.html
@@ -11,8 +11,9 @@
 				  <div id="{{group.id}}" class="panel-collapse collapse" ng-controller="SidebarCtrl">
 					  <div class="list-item" ng-class="{selected:isSelected('{{item.url}}')}" ng-repeat="item in group.items | filter:showItem">
 							<h6>
-                                <a ng-show="item.route!=null" class="list-group-item" target="{{item.target}}" href="{{item.route}}" data-i18n="{{item.name}}"></a>
-                                <a ng-show="item.route==null" class="list-group-item" data-toggle="modal" href="" ng-click="setDirectUrl('{{item.url}}'); setModalTitle('{{item.modaltitle}}'); openModal('fullModalDirect');" data-i18n="{{item.name}}"></a>
+                                <a ng-show="item.route" class="list-group-item" target="{{item.target}}" href="{{item.route}}" data-i18n="{{item.name}}"></a>
+                                <a ng-show="!item.route && item.url" class="list-group-item" data-toggle="modal" href="" ng-click="setDirectUrl('{{item.url}}'); setModalTitle('{{item.modaltitle}}'); openModal('fullModalDirect');" data-i18n="{{item.name}}"></a>
+                                <a ng-show="!item.route && !item.url && item.modalId" class="list-group-item" data-toggle="modal" href="" data-target="{{item.modalId}}" data-i18n="{{item.name}}"></a>
 							</h6>
 					  </div>
 				  </div>
@@ -29,6 +30,8 @@
                         </div>
                     </div>
                 </div>
+
+                <ng-include src="'js/workbench/extraction-and-loading/reindex.html'"></ng-include>
 			</div>
 
 		</div>
