--- a/src/main/webapp/js/account/account.html
+++ b/src/main/webapp/js/account/account.html
@@ -32,9 +32,9 @@
         </tr>
     </table>
 
-    <button type="button" class="btn-sm btn-primary" data-toggle="modal" data-target="#modalChangePassword" ng-if="currentAccount.username" data-i18n="_change-password_"></button>
+    <button type="button" class="btn-sm btn-primary" data-toggle="modal" data-target="#modalChangePassword" ng-if="currentAccount.username" ng-click="clearChangePasswordForm()" data-i18n="_change-password_"></button>
   </div>
-  <div class="modal fade" id="modalChangePassword">
+  <div class="modal fade" id="modalChangePassword" modal-focus="#oldPassword">
     <div class="modal-dialog">
       <div class="modal-content">
         <form name="changePasswordForm" class="form-horizontal InputForm" role="form">
