--- a/src/main/webapp/js/workbench/extraction-and-loading/d2rq-mapping.html
+++ b/src/main/webapp/js/workbench/extraction-and-loading/d2rq-mapping.html
@@ -264,7 +264,7 @@
                 <ul class="list-unstyled">
                     <li ng-repeat="m in mg.mappings">
                         <button type="button" class="btn btn-default btn-xs" ng-click="deleteMapping('{{m.id}}')"><span class="glyphicon glyphicon-trash"></span></button>
-                        <button type="button" class="btn btn-default btn-xs" ng-click="close('#modalMappingGroup')" data-target="#modalMapping" ng-click="editMapping(m, mg)"><span class="glyphicon glyphicon-edit"></span></button>
+                        <button type="button" class="btn btn-default btn-xs" data-target="#modalMapping" ng-click="editMapping(m, mg)"><span class="glyphicon glyphicon-edit"></span></button>
                         <span>{{m.name}}</span>
                     </li>
                 </ul>
